# miqrochain

./: .gitignore  CMakeLists.txt  FIREWALL.md  LICENSE  NOTICE  README-Windows.md  README.md  SECURITY.md  miqro_gui_installer.iss  miqrochain_src_patch_keepalive_ports.patch  package-win.ps1
.github/workflows/: ci.yml  windows-installer.yml
cmake/: secp256k1_basic_config.h
docs/: IBD_ARCHITECTURE.md
gui/miqro_gui/: CMakeLists.txt  README.md
gui/miqro_gui/resources/: icons.qrc
gui/miqro_gui/src/: appsettings.cpp  appsettings.h  daemoncontroller.cpp  daemoncontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  rpcclient.cpp  rpcclient.h
gui/miqro_gui/src/util/: cookie.cpp  cookie.h
gui/miqro_gui/src/widgets/: consolewidget.cpp  consolewidget.h  logswidget.cpp  logswidget.h  miningwidget.cpp  miningwidget.h  overviewwidget.cpp  overviewwidget.h  settingswidget.cpp  settingswidget.h  walletwidget.cpp  walletwidget.h
scripts/: vendor_microecc.py
src/: address.cpp  address.h  addressindex.cpp  addressindex.h  addrman.cpp  addrman.h  assume_valid.h  bans.cpp  bans.h  base58.cpp  base58.h  base58check.cpp  base58check.h  bip39_words_en.h  block.cpp  block.h  blockindex.cpp  blockindex.h  chain.cpp  chain.h  chain_validator.cpp  chain_validator.h  compact_blocks.cpp  compact_blocks.h  config.cpp  config.h  constants.h  difficulty.cpp  difficulty.h  ensure_utxo_reindex.cpp  hash160.cpp  hash160.h  hasher.cpp  hasher.h  hd_wallet.cpp  hd_wallet.h  hex.cpp  hex.h  http.cpp  http.h  (+81 more)
src/cli/: miqminer_rpc.cpp  miqwallet.cpp
src/crypto/: ecdsa_iface.h  ecdsa_libsecp256k1.cpp  ecdsa_secp256k1.cpp  ecdsa_secp256k1.h  ecdsa_uECC.cpp  ecdsa_uECC.h  uECC_shim.c
src/filters/: bip158.cpp  bip158.h  bloom.cpp  bloom.h  filter_store.h  gcs.h  siphash.cpp  siphash.h
src/stratum/: stratum_server.cpp  stratum_server.h
src/tests/: integration_tests.cpp  mempool_policy.cpp  tests_crypto.cpp
src/tools/: miq_keygen.cpp  miqwallet.cpp
src/wallet/: http_client.cpp  http_client.h  node_client.cpp  node_client.h  node_discovery.cpp  node_discovery.h  p2p_light.cpp  p2p_light.h  paths.cpp  paths.h  spv_simple.cpp  spv_simple.h
tests/: fuzz_json.cpp  test_bloom.cpp  test_crypto.cpp  test_header_format.cpp  test_ser.cpp  test_stratum.cpp
